fix z-index for options-floated

--- a/app/assets/stylesheets/blocks/b-options-floated.sass
+++ b/app/assets/stylesheets/blocks/b-options-floated.sass
@@ -26,6 +26,7 @@
   line-height: 12px
   position: absolute
   right: 10px
+  z-index: 1
 
   +lte_ipad
     line-height: $line_height
